--- a/doc/agile/sprint_backlog_95.org
+++ b/doc/agile/sprint_backlog_95.org
@@ -12,22 +12,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-03 Tue 17:06]
+#+CAPTION: Clock summary at [2017-01-03 Tue 17:11]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *12:43* |       |      | 100.0 |
+| *Total time*                                                                | *12:48* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 12:43   |       |      | 100.0 |
-| Active                                                                      |         | 12:43 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 0:25 |   3.3 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:57 |   7.5 |
-| COMPLETED Consider supporting multiple inheritance on non-proxy models      |         |       | 3:24 |  26.7 |
-| STARTED Add basic validation infrastructure                                 |         |       | 7:57 |  62.5 |
+| Stories                                                                     | 12:48   |       |      | 100.0 |
+| Active                                                                      |         | 12:48 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 0:30 |   3.9 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:57 |   7.4 |
+| COMPLETED Consider supporting multiple inheritance on non-proxy models      |         |       | 3:24 |  26.6 |
+| STARTED Add basic validation infrastructure                                 |         |       | 7:57 |  62.1 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
 *** STARTED Sprint and product backlog grooming                       :story:
+    CLOCK: [2017-01-03 Tue 17:06]--[2017-01-03 Tue 17:11] =>  0:05
     CLOCK: [2017-01-03 Tue 17:02]--[2017-01-03 Tue 17:06] =>  0:04
     CLOCK: [2016-12-28 Wed 12:02]--[2016-12-28 Wed 12:23] =>  0:21
 
