--- a/doc/agile/sprint_backlog_95.org
+++ b/doc/agile/sprint_backlog_95.org
@@ -12,18 +12,18 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-03 Tue 17:11]
+#+CAPTION: Clock summary at [2017-01-03 Tue 17:53]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *12:48* |       |      | 100.0 |
+| *Total time*                                                                | *13:31* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 12:48   |       |      | 100.0 |
-| Active                                                                      |         | 12:48 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 0:30 |   3.9 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:57 |   7.4 |
-| COMPLETED Consider supporting multiple inheritance on non-proxy models      |         |       | 3:24 |  26.6 |
-| STARTED Add basic validation infrastructure                                 |         |       | 7:57 |  62.1 |
+| Stories                                                                     | 13:31   |       |      | 100.0 |
+| Active                                                                      |         | 13:31 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 0:30 |   3.7 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:57 |   7.0 |
+| COMPLETED Consider supporting multiple inheritance on non-proxy models      |         |       | 3:24 |  25.2 |
+| COMPLETED Add basic validation infrastructure                               |         |       | 8:40 |  64.1 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -123,7 +123,9 @@ Validation check removed from transformer:
 :                    po.id()));
 :        }
 
-*** STARTED Add basic validation infrastructure                       :story:
+*** COMPLETED Add basic validation infrastructure                     :story:
+    CLOSED: [2017-01-03 Tue 17:50]
+    CLOCK: [2017-01-03 Tue 17:12]--[2017-01-03 Tue 17:55] =>  0:43
     CLOCK: [2017-01-03 Tue 16:48]--[2017-01-03 Tue 17:01] =>  0:13
     CLOCK: [2017-01-03 Tue 16:37]--[2017-01-03 Tue 16:47] =>  0:10
     CLOCK: [2017-01-03 Tue 14:46]--[2017-01-03 Tue 16:36] =>  1:50
