--- a/doc/agile/sprint_backlog_95.org
+++ b/doc/agile/sprint_backlog_95.org
@@ -12,20 +12,20 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-03 Tue 22:28]
+#+CAPTION: Clock summary at [2017-01-03 Tue 22:37]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *14:54* |       |      | 100.0 |
+| *Total time*                                                                | *15:02* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 14:54   |       |      | 100.0 |
-| Active                                                                      |         | 14:54 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 0:30 |   3.4 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:57 |   6.4 |
-| COMPLETED Consider supporting multiple inheritance on non-proxy models      |         |       | 3:24 |  22.8 |
-| COMPLETED Add basic validation infrastructure                               |         |       | 8:40 |  58.2 |
+| Stories                                                                     | 15:02   |       |      | 100.0 |
+| Active                                                                      |         | 15:02 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 0:30 |   3.3 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:57 |   6.3 |
+| COMPLETED Consider supporting multiple inheritance on non-proxy models      |         |       | 3:24 |  22.6 |
+| COMPLETED Add basic validation infrastructure                               |         |       | 8:40 |  57.6 |
 | COMPLETED Fix borked windows build                                          |         |       | 0:26 |   2.9 |
-| STARTED Clean up enumerator implementation                                  |         |       | 0:57 |   6.4 |
+| COMPLETED Clean up enumerator implementation                                |         |       | 1:05 |   7.2 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -197,7 +197,9 @@ We've borked the windows build with the validator changes.
 :  C:\projects\dogen\projects\yarn\src\types\model_validator.cpp(62): error C2440: 'initializing': cannot convert from 'initializer list' to 'int' [C:\projects\dogen\build\output\msvc\Debug\projects\yarn\src\yarn.vcxproj]
 :  C:\projects\dogen\projects\yarn\src\types\model_validator.cpp(64): error C2079: 'cpp_builtins' uses undefined class 'std::array<std::string,11>' [C:\projects\dogen\build\output\msvc\Debug\projects\yarn\src\yarn.vcxproj]
 
-*** STARTED Clean up enumerator implementation                        :story:
+*** COMPLETED Clean up enumerator implementation                      :story:
+    CLOSED: [2017-01-03 Tue 22:37]
+    CLOCK: [2017-01-03 Tue 22:29]--[2017-01-03 Tue 22:37] =>  0:08
     CLOCK: [2017-01-03 Tue 22:03]--[2017-01-03 Tue 22:28] =>  0:25
     CLOCK: [2017-01-03 Tue 18:30]--[2017-01-03 Tue 19:02] =>  0:32
 
