--- a/doc/agile/sprint_backlog_95.org
+++ b/doc/agile/sprint_backlog_95.org
@@ -12,21 +12,21 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-03 Tue 23:43]
+#+CAPTION: Clock summary at [2017-01-04 Wed 11:33]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *16:08* |       |      | 100.0 |
+| *Total time*                                                                | *18:40* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 16:08   |       |      | 100.0 |
-| Active                                                                      |         | 16:08 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 0:30 |   3.1 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:57 |   5.9 |
-| COMPLETED Consider supporting multiple inheritance on non-proxy models      |         |       | 3:24 |  21.1 |
-| COMPLETED Add basic validation infrastructure                               |         |       | 8:40 |  53.7 |
-| COMPLETED Fix borked windows build                                          |         |       | 0:26 |   2.7 |
-| COMPLETED Clean up enumerator implementation                                |         |       | 1:05 |   6.7 |
-| STARTED Measure validation slowdown                                         |         |       | 1:06 |   6.8 |
+| Stories                                                                     | 18:40   |       |      | 100.0 |
+| Active                                                                      |         | 18:40 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 0:30 |   2.7 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:57 |   5.1 |
+| COMPLETED Consider supporting multiple inheritance on non-proxy models      |         |       | 3:24 |  18.2 |
+| COMPLETED Add basic validation infrastructure                               |         |       | 8:40 |  46.4 |
+| COMPLETED Fix borked windows build                                          |         |       | 0:26 |   2.3 |
+| COMPLETED Clean up enumerator implementation                                |         |       | 1:05 |   5.8 |
+| STARTED Measure validation slowdown                                         |         |       | 3:38 |  19.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -210,6 +210,7 @@ We've borked the windows build with the validator changes.
   meta-data to override it.
 
 *** STARTED Measure validation slowdown                               :story:
+    CLOCK: [2017-01-04 Wed 09:01]--[2017-01-04 Wed 11:33] =>  2:32
     CLOCK: [2017-01-03 Tue 22:37]--[2017-01-03 Tue 23:43] =>  1:06
 
 It appears generating the dogen models is a lot slower with validation
@@ -293,6 +294,15 @@ Links:
 
 An increase of around 1s - 1.5s.
 
+*** Benchmarks do not work for utility tests                          :story:
+
+When we run the benchmarks for utility we get an error:
+
+: Running 95 test cases...
+: /home/marco/Development/DomainDrivenConsulting/dogen/projects/utility/tests/asserter_tests.cpp(141): error: in "asserter_tests/assert_directory_good_data_set_returns_true": check asserter::assert_directory(e, a) has failed
+
+Seems like the tests do not clean up after themselves. We need to add
+some clean up logic and re-enable the tests.
 
 *** Augment element ID with meta-model type                           :story:
 
