--- a/doc/agile/sprint_backlog_95.org
+++ b/doc/agile/sprint_backlog_95.org
@@ -12,23 +12,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-04 Wed 17:55]
+#+CAPTION: Clock summary at [2017-01-04 Wed 22:16]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *23:11* |       |      | 100.0 |
+| *Total time*                                                                | *24:56* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 23:11   |       |      | 100.0 |
-| Active                                                                      |         | 23:11 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 0:30 |   2.2 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:57 |   4.1 |
-| COMPLETED Consider supporting multiple inheritance on non-proxy models      |         |       | 3:24 |  14.7 |
-| COMPLETED Add basic validation infrastructure                               |         |       | 8:40 |  37.4 |
-| COMPLETED Fix borked windows build                                          |         |       | 0:26 |   1.9 |
-| COMPLETED Clean up enumerator implementation                                |         |       | 1:05 |   4.7 |
-| COMPLETED Measure validation slowdown                                       |         |       | 6:38 |  28.6 |
-| STARTED Parsing should support dot notation                                 |         |       | 0:45 |   3.2 |
-| STARTED Add container types to C# proxy models                              |         |       | 0:46 |   3.3 |
+| Stories                                                                     | 24:56   |       |      | 100.0 |
+| Active                                                                      |         | 24:56 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 0:30 |   2.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:57 |   3.8 |
+| COMPLETED Consider supporting multiple inheritance on non-proxy models      |         |       | 3:24 |  13.6 |
+| COMPLETED Add basic validation infrastructure                               |         |       | 8:40 |  34.8 |
+| COMPLETED Fix borked windows build                                          |         |       | 0:26 |   1.7 |
+| COMPLETED Clean up enumerator implementation                                |         |       | 1:05 |   4.3 |
+| COMPLETED Measure validation slowdown                                       |         |       | 6:38 |  26.6 |
+| STARTED Parsing should support dot notation                                 |         |       | 2:30 |  10.0 |
+| STARTED Add container types to C# proxy models                              |         |       | 0:46 |   3.1 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -364,6 +364,7 @@ Links:
 An increase of around 1s - 1.5s.
 
 *** STARTED Parsing should support dot notation                       :story:
+    CLOCK: [2017-01-04 Wed 20:31]--[2017-01-04 Wed 22:16] =>  1:45
     CLOCK: [2017-01-04 Wed 17:45]--[2017-01-04 Wed 17:55] =>  0:10
     CLOCK: [2017-01-04 Wed 17:09]--[2017-01-04 Wed 17:44] =>  0:35
 
@@ -380,6 +381,10 @@ Notes:
   means that we are still using the C++ scope operator for those even
   after fixing the parser. We need to update the name builder to infer
   the scope delimiter.
+- in fact we have multiple sources of names with scopes: a) parent
+  names via the meta-data (parsing expander via name builder) b) model
+  name via file name (name builder) c) external module path via
+  meta-data (name builder).
 
 *** STARTED Add container types to C# proxy models                    :story:
     CLOCK: [2017-01-04 Wed 16:22]--[2017-01-04 Wed 17:08] =>  0:46
