--- a/doc/agile/sprint_backlog_95.org
+++ b/doc/agile/sprint_backlog_95.org
@@ -12,24 +12,24 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-06 Fri 17:36]
+#+CAPTION: Clock summary at [2017-01-06 Fri 17:51]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *34:34* |       |      | 100.0 |
+| *Total time*                                                                | *34:48* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 34:34   |       |      | 100.0 |
-| Active                                                                      |         | 34:34 |      | 100.0 |
+| Stories                                                                     | 34:48   |       |      | 100.0 |
+| Active                                                                      |         | 34:48 |      | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       | 0:30 |   1.4 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:57 |   2.7 |
 | COMPLETED Consider supporting multiple inheritance on non-proxy models      |         |       | 3:24 |   9.8 |
-| COMPLETED Add basic validation infrastructure                               |         |       | 8:40 |  25.1 |
-| COMPLETED Fix borked windows build                                          |         |       | 0:26 |   1.3 |
+| COMPLETED Add basic validation infrastructure                               |         |       | 8:40 |  24.9 |
+| COMPLETED Fix borked windows build                                          |         |       | 0:26 |   1.2 |
 | COMPLETED Clean up enumerator implementation                                |         |       | 1:05 |   3.1 |
-| COMPLETED Measure validation slowdown                                       |         |       | 6:38 |  19.2 |
-| COMPLETED Parsing should support dot notation                               |         |       | 2:54 |   8.4 |
-| COMPLETED Add internal object dumper resolution                             |         |       | 4:51 |  14.0 |
-| STARTED Add container types to C# proxy models                              |         |       | 5:09 |  14.9 |
+| COMPLETED Measure validation slowdown                                       |         |       | 6:38 |  19.1 |
+| COMPLETED Parsing should support dot notation                               |         |       | 2:54 |   8.3 |
+| COMPLETED Add internal object dumper resolution                             |         |       | 4:51 |  13.9 |
+| STARTED Add container types to C# proxy models                              |         |       | 5:23 |  15.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -420,6 +420,7 @@ for all model types and primitives. Add a registrar for local dumpers.
 : }
 
 *** STARTED Add container types to C# proxy models                    :story:
+    CLOCK: [2017-01-06 Fri 17:37]--[2017-01-06 Fri 17:51] =>  0:14
     CLOCK: [2017-01-06 Fri 17:32]--[2017-01-06 Fri 17:36] =>  0:04
     CLOCK: [2017-01-06 Fri 16:40]--[2017-01-06 Fri 17:32] =>  0:52
     CLOCK: [2017-01-05 Thu 14:01]--[2017-01-05 Thu 14:53] =>  0:52
