--- a/doc/agile/sprint_backlog_95.org
+++ b/doc/agile/sprint_backlog_95.org
@@ -12,24 +12,24 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-06 Fri 17:51]
+#+CAPTION: Clock summary at [2017-01-06 Fri 23:27]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *34:48* |       |      | 100.0 |
+| *Total time*                                                                | *36:27* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 34:48   |       |      | 100.0 |
-| Active                                                                      |         | 34:48 |      | 100.0 |
+| Stories                                                                     | 36:27   |       |      | 100.0 |
+| Active                                                                      |         | 36:27 |      | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       | 0:30 |   1.4 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:57 |   2.7 |
-| COMPLETED Consider supporting multiple inheritance on non-proxy models      |         |       | 3:24 |   9.8 |
-| COMPLETED Add basic validation infrastructure                               |         |       | 8:40 |  24.9 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:57 |   2.6 |
+| COMPLETED Consider supporting multiple inheritance on non-proxy models      |         |       | 3:24 |   9.3 |
+| COMPLETED Add basic validation infrastructure                               |         |       | 8:40 |  23.8 |
 | COMPLETED Fix borked windows build                                          |         |       | 0:26 |   1.2 |
-| COMPLETED Clean up enumerator implementation                                |         |       | 1:05 |   3.1 |
-| COMPLETED Measure validation slowdown                                       |         |       | 6:38 |  19.1 |
-| COMPLETED Parsing should support dot notation                               |         |       | 2:54 |   8.3 |
-| COMPLETED Add internal object dumper resolution                             |         |       | 4:51 |  13.9 |
-| STARTED Add container types to C# proxy models                              |         |       | 5:23 |  15.5 |
+| COMPLETED Clean up enumerator implementation                                |         |       | 1:05 |   3.0 |
+| COMPLETED Measure validation slowdown                                       |         |       | 6:38 |  18.2 |
+| COMPLETED Parsing should support dot notation                               |         |       | 2:54 |   8.0 |
+| COMPLETED Add internal object dumper resolution                             |         |       | 4:51 |  13.3 |
+| STARTED Add container types to C# proxy models                              |         |       | 7:02 |  19.3 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -420,6 +420,8 @@ for all model types and primitives. Add a registrar for local dumpers.
 : }
 
 *** STARTED Add container types to C# proxy models                    :story:
+    CLOCK: [2017-01-06 Fri 22:01]--[2017-01-06 Fri 23:27] =>  1:26
+    CLOCK: [2017-01-06 Fri 17:52]--[2017-01-06 Fri 18:05] =>  0:13
     CLOCK: [2017-01-06 Fri 17:37]--[2017-01-06 Fri 17:51] =>  0:14
     CLOCK: [2017-01-06 Fri 17:32]--[2017-01-06 Fri 17:36] =>  0:04
     CLOCK: [2017-01-06 Fri 16:40]--[2017-01-06 Fri 17:32] =>  0:52
@@ -530,14 +532,21 @@ System.Collections:
 
 : IEnumerable
 : ICollection: IEnumerable
-: IDictionary : ICollection, IEnumerable
 : IList : ICollection, IEnumerable
 : ArrayList : IList, ICollection, IEnumerable
-: BitArray : ICollection, IEnumerable
+: IDictionary : ICollection
 : Hashtable : IDictionary, ICollection, IEnumerable
-: Queue : ICollection, IEnumerable, ICloneable
-: SortedList : IDictionary, ICollection, IEnumerable, ICloneable
-: Stack : ICollection, IEnumerable, ICloneable
+: DictionaryEntry
+: HybridDictionary : IDictionary, ICollection, IEnumerable (System.Collections.Specialized)
+: IOrderedDictionary : IDictionary, ICollection, IEnumerable (System.Collections.Specialized)
+: BitArray : ICollection, IEnumerable
+: Queue : ICollection, IEnumerable
+: SortedList : IDictionary, ICollection, IEnumerable
+: Stack : ICollection, IEnumerable
+: NameValueCollection NameObjectCollectionBase (System.Collections.Specialized)
+:    ICollection, IEnumerable, ISerializable,
+
+https://msdn.microsoft.com/en-us/library/system.collections.specialized.namevaluecollection(v=vs.110).aspx
 
 System.Collections.ObjectModel:
 
